--- a/FrontEnd/src/pages/Cart/Cart.css
+++ b/FrontEnd/src/pages/Cart/Cart.css
@@ -1,14 +1,11 @@
 .item-container {
     display: flex;
-    justify-content: space-around;
-    align-content: center;
+    justify-content: space-between;
     align-items: center;
-
     background-color: rgb(255, 255, 255);
-    border-top: 4px solid rgb(160, 162, 163);
-    /* border-radius: 10px; */
+    border-top: 3px solid rgb(160, 162, 163);
     width: 100%;
-    margin: 50px auto;
+    margin: 10px auto;
     color: rgb(0, 0, 0);
     padding: 5px;
 }
@@ -17,15 +14,15 @@
 .img-title-parent {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 33%;
-
 }
 
 .img-title-parent img {
-    border-radius: 10px;
-    width: 75px;
-    height: 70px;
-    margin: 4px 0 1px 0;
+    border-radius: 5px;
+    width: 60px;
+    height: 55px;
+    margin: 2px;
 }
 
 .img-title-parent p {
@@ -37,15 +34,15 @@
 
 .price {
     border-radius: 4px;
-    color: #333;
+    color: #fff;
     font-size: 18px;
     font-weight: 500;
 }
-.sub-total , .sub-total div {
+
+.sub-total,
+.sub-total div {
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: #fff !important;
 }
-
-
